--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -3,6 +3,8 @@
   .hero { padding-top: 5px; }
   .heroCard {
     grid-template-columns: 1fr;
+    max-width: calc(100% - 24px);
+    margin: 0 auto;
   }
   .heroCardContent {
     display: contents;
